--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/server.js" }]
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }]
 }
